
include_directories(
  basic
)


add_subdirectory(NNpooling)
add_subdirectory(NNCNNTriReluPoolLabeler)
add_subdirectory(NNCNNTriSigPoolLabeler)
add_subdirectory(NNCNNTriTanhPoolLabeler)

add_subdirectory(NNCNNUniAvgReLuPoolLabeler)
add_subdirectory(NNCNNUniAvgSigPoolLabeler)
add_subdirectory(NNCNNUniAvgTanhPoolLabeler)

add_subdirectory(NNCNNUniMaxTanhPoolLabeler)
add_subdirectory(NNCNNUniMaxSigPoolLabeler)
add_subdirectory(NNCNNUniMaxReluPoolLabeler)
add_subdirectory(NNCNNUniMaxReluPoolLabelerEX)

add_subdirectory(NNCNNUniMinReluPoolLabeler)
add_subdirectory(NNCNNUniMinSigPoolLabeler)
add_subdirectory(NNCNNUniMinTanhPoolLabeler)



add_subdirectory(NNCNNBiPoolLabeler)